[tool.poetry]
name = "rpicar"
version = "0.1.0"
description = "A Raspberry PI car"
authors = ["Rayyan Khan <weatherwhiz06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
